; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/gssmask/extr_gssmaestro.c_get_moniker.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/gssmask/extr_gssmaestro.c_get_moniker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client = type { i32 }

@eGetMoniker = common dso_local global i32 0, align 4
@GSMERR_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.client*, i8**)* @get_moniker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_moniker(%struct.client* %0, i8** %1) #0 {
  %3 = alloca %struct.client*, align 8
  %4 = alloca i8**, align 8
  store %struct.client* %0, %struct.client** %3, align 8
  store i8** %1, i8*** %4, align 8
  %5 = load %struct.client*, %struct.client** %3, align 8
  %6 = load i32, i32* @eGetMoniker, align 4
  %7 = call i32 @put32(%struct.client* %5, i32 %6)
  %8 = load %struct.client*, %struct.client** %3, align 8
  %9 = load i8**, i8*** %4, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = call i32 @retstring(%struct.client* %8, i8* %10)
  %12 = load i32, i32* @GSMERR_OK, align 4
  ret i32 %12
}

declare dso_local i32 @put32(%struct.client*, i32) #1

declare dso_local i32 @retstring(%struct.client*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
